# lambda-hello-rust

./: Cargo.toml  Makefile  README.md  template.yaml
src/: main.rs
